--- a/example_box/Vagrantfile
+++ b/example_box/Vagrantfile
@@ -2,7 +2,7 @@
 # vi: set ft=ruby :
 
 Vagrant.configure("2") do |config|
-  config.vm.provider :joyent do |joyent|
-    joyent.dataset = "bad2face-8738-11e2-ac72-0378d02f84de"
+  config.vm.provider :fifo do |fifo|
+    fifo.dataset = "bad2face-8738-11e2-ac72-0378d02f84de"
   end
 end
